[workspace]
resolver = "2"
members = ["ecmascript_atomics", "fuzz", "gen_copy"]

[workspace.package]
edition = "2024"
version = "0.2.2"
license = "MPL-2.0"
repository = "https://github.com/trynova/ecmascript_atomics/"
readme = "README.md"
keywords = ["ecmascript", "java", "atomics"]
categories = ["concurrency"]
authors = ["Aapo Alasuutari"]
