[package]
name = "ecmascript_atomics"
repository = "https://github.com/trynova/ecmascript_atomics/tree/main/ecmascript_atomics"
description = "ECMAScript and Java memory model racy atomics."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ecmascript_atomics_gen_copy = { path = "../gen_copy", version = "=0.1.0" }

[features]
alloc = []
